--- a/app/src/main/res/drawable/wechat_icon.xml
+++ b/app/src/main/res/drawable/wechat_icon.xml
@@ -3,7 +3,26 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- 绿色气泡 -->
     <path
         android:fillColor="#FF07C160"
-        android:pathData="M8.686,13.236c-0.678,0 -1.23,-0.551 -1.23,-1.23s0.552,-1.23 1.23,-1.23 1.23,0.551 1.23,1.23 -0.552,1.23 -1.23,1.23zM14.212,10.776c0.678,0 1.23,0.551 1.23,1.23s-0.552,1.23 -1.23,1.23 -1.23,-0.551 -1.23,-1.23 0.552,-1.23 1.23,-1.23zM9.926,7.825c0.678,0 1.23,0.551 1.23,1.23s-0.552,1.23 -1.23,1.23 -1.23,-0.551 -1.23,-1.23 0.552,-1.23 1.23,-1.23zM15.452,10.285c-0.678,0 -1.23,-0.551 -1.23,-1.23s0.552,-1.23 1.23,-1.23 1.23,0.551 1.23,1.23 -0.552,1.23 -1.23,1.23zM22,12c0,5.523 -4.477,10 -10,10S2,17.523 2,12 6.477,2 12,2s10,4.477 10,10zM18.408,14.97c0.731,-0.558 1.212,-1.368 1.212,-2.283 0,-1.719 -1.726,-3.116 -3.852,-3.116 -2.126,0 -3.852,1.397 -3.852,3.116 0,1.719 1.726,3.116 3.852,3.116 0.449,0 0.88,-0.062 1.274,-0.174l0.175,-0.054 1.173,0.586 -0.317,-1.076 0.335,-0.115zM12.084,16.429c-0.394,0.112 -0.825,0.174 -1.274,0.174 -2.126,0 -3.852,-1.397 -3.852,-3.116 0,-1.719 1.726,-3.116 3.852,-3.116 2.126,0 3.852,1.397 3.852,3.116 0,0.915 -0.481,1.725 -1.212,2.283l-0.335,0.115 0.317,1.076 -1.173,-0.586 -0.175,0.054z" />
+        android:pathData="M10,6c-3.9,0 -7,2.5 -7,5.5c0,1.7 1,3.2 2.6,4.3l-0.6,2c0,0.1 0.1,0.2 0.2,0.1l2.3-1.2c0.8,0.2 1.6,0.3 2.5,0.3c3.9,0 7-2.5 7-5.5S13.9,6 10,6z"/>
+    <!-- 白色气泡 -->
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M17,9c-3.3,0 -6,2.2 -6,5s2.7,5 6,5c0.7,0 1.4-0.1 2-0.3l1.8,0.9c0.1,0.1 0.2-0.1 0.2-0.1l-0.5-1.6c1.3-0.9 2.5-2.2 2.5-3.9C23,11.2 20.3,9 17,9z"/>
+    <!-- 绿色气泡中的两个点 -->
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M8,10.5m-0.8,0a0.8,0.8 0,1 1,1.6 0a0.8,0.8 0,1 1,-1.6 0"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M12,10.5m-0.8,0a0.8,0.8 0,1 1,1.6 0a0.8,0.8 0,1 1,-1.6 0"/>
+    <!-- 白色气泡中的两个点 -->
+    <path
+        android:fillColor="#FF07C160"
+        android:pathData="M15,13.5m-0.8,0a0.8,0.8 0,1 1,1.6 0a0.8,0.8 0,1 1,-1.6 0"/>
+    <path
+        android:fillColor="#FF07C160"
+        android:pathData="M19,13.5m-0.8,0a0.8,0.8 0,1 1,1.6 0a0.8,0.8 0,1 1,-1.6 0"/>
 </vector> 
